@startuml
class EmployeeController {
  +getEmployeeById(id: Long): BaseResponse<Employee>
}
interface EmployeeMapper {
  +selectOneById(id: Long): Employee
}
class Employee {
  +id: Long
  +name: String
  +address: String 
  +gender: Integer
  +rocId: String
  ' other fields as per actual entity
}
class BaseResponse<T> {
  +code: String
  +message: String
  +data: T
}

EmployeeController ..> EmployeeMapper : uses
EmployeeController ..> BaseResponse : uses in response
EmployeeController ..> Employee : uses in response (via BaseResponse)
EmployeeMapper ..> Employee : returns
BaseResponse o-- Employee : (T is Employee)
@enduml
